feat: create endpoint to list available cars
