# src/routes/cars.routes.ts
@@ -1,8 +1,9 @@
 import { Router } from 'express';
 
-import { createCarController } from '@/cars/useCases';
+import { createCarController, listAvailableCarsController } from '@/cars/useCases';
 import { ensureAdmin, ensureAuth } from '~/middlewares';
 
 export const carsRoutes = Router();
 
+carsRoutes.get('/cars/available', listAvailableCarsController.handle);
 carsRoutes.post('/cars', ensureAuth(), ensureAdmin(), createCarController.handle);
