# src/swagger.json
@@ -294,6 +294,45 @@
         }
       }
     },
+    "/api/v1/cars/available": {
+      "get": {
+        "tags": [
+          "Cars"
+        ],
+        "summary": "List available cars",
+        "description": "",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Created",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/definitions/car"
+                  }
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/definitions/error"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/v1/cars/categories": {
       "get": {
         "tags": [
